# mcp-visualizator

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  SECURITY.md  deny.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  security.yml
.husky/: pre-commit
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: config_parser.rs  errors.rs  mod.rs  models.rs  telemetry.rs  usage.rs
src-tauri/src/infrastructure/storage/: db.rs
src-tauri/tests/fixtures/: catalog.json  claude-valid.json  codex-valid.toml  opencode-malformed.json  opencode-valid.json
